# cgen

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
app/: README.md
app/campaign_generator/: __init__.py  admin.py  ai_service.py  apps.py  forms.py  models.py  tests.py  translation_service.py  urls.py  utils.py  views.py
app/campaign_generator/fixtures/: demo_briefs.json  demo_briefs_languages.json  initial_languages.json
app/campaign_generator/migrations/: 0001_initial.py  0002_brief_reference_image_and_more.py  0003_alter_brief_reference_image_demobrief.py  0004_delete_generationsession.py  0005_generationsession.py
app/campaign_generator/templates/campaign_generator/: asset_detail.html  base.html  brief_detail.html  create_brief.html  gallery.html  home.html  upload_brief.html
app/config/: asgi.py  settings.py  urls.py
app/static/js/: create_brief.js
docs/: DECOUPLE.md
scripts/: toggle_dev_mode.py
seeds/: README.md  demo_briefs.json  demo_briefs.yaml
